interrupt related code merge